// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskCard - Comprehensive Test Suite Snapshot Testing completed task snapshot 1`] = `
<TouchableOpacity
  accessibilityLabel="Task: Test Task"
  accessibilityRole="button"
  accessibilityState={
    {
      "selected": true,
    }
  }
  onPress={[Function]}
  style={
    [
      {
        "backgroundColor": "#FEFEFE",
        "borderRadius": 12,
        "padding": 16,
      },
      {
        "backgroundColor": "#F9FAFB",
      },
    ]
  }
  testID="completed-snapshot"
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "marginBottom": 12,
      }
    }
  >
    <View
      style={
        [
          {
            "borderRadius": 2,
            "height": 40,
            "marginRight": 12,
            "width": 4,
          },
          {
            "backgroundColor": "#22C55E",
          },
        ]
      }
    />
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#101828",
                "fontFamily": "Inter-Medium",
                "fontSize": 16,
                "letterSpacing": 0.1,
                "lineHeight": 24,
                "marginBottom": 4,
              },
              {
                "textDecorationLine": "line-through",
              },
            ]
          }
          testID="task-title"
        >
          Test Task
        </Text>
        <View
          style={
            {
              "backgroundColor": "#22C55E",
              "borderRadius": 12,
              "marginLeft": 8,
              "padding": 4,
            }
          }
          testID="completed-badge"
        >
          <Text
            style={
              {
                "color": "#FEFEFE",
                "fontSize": 16,
              }
            }
            testID="icon-check"
          >
            Icon-check
          </Text>
        </View>
      </View>
      <Text
        numberOfLines={2}
        style={
          [
            {
              "color": "#475467",
              "fontFamily": "Inter-Regular",
              "fontSize": 14,
              "letterSpacing": 0.2,
              "lineHeight": 20,
            },
            {
              "textDecorationLine": "line-through",
            },
          ]
        }
        testID="task-description"
      >
        This is a test task description for testing purposes
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#667085",
          "fontSize": 16,
        }
      }
      testID="icon-right"
    >
      Icon-right
    </Text>
  </View>
  <View
    style={
      {
        "gap": 8,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 4,
          }
        }
      >
        <Text
          style={
            {
              "color": "#475467",
              "fontSize": 16,
            }
          }
          testID="icon-calendar"
        >
          Icon-calendar
        </Text>
        <Text
          style={
            [
              {
                "color": "#475467",
                "fontFamily": "Inter-Regular",
                "fontSize": 12,
                "letterSpacing": 0.4,
                "lineHeight": 16,
              },
              false,
              {
                "textDecorationLine": "line-through",
              },
            ]
          }
          testID="due-date-text"
        >
          Completed 1/10/2024
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 4,
          }
        }
      >
        <Text
          style={
            {
              "color": "#475467",
              "fontSize": 16,
            }
          }
          testID="icon-clock"
        >
          Icon-clock
        </Text>
        <Text
          style={
            [
              {
                "color": "#475467",
                "fontFamily": "Inter-Regular",
                "fontSize": 12,
                "letterSpacing": 0.4,
                "lineHeight": 16,
              },
              {
                "textDecorationLine": "line-through",
              },
            ]
          }
          testID="duration-text"
        >
          30
           min
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 4,
          }
        }
        testID="money-saved-item"
      >
        <Text
          style={
            {
              "color": "#22C55E",
              "fontSize": 16,
            }
          }
          testID="icon-check"
        >
          Icon-check
        </Text>
        <Text
          style={
            [
              {
                "color": "#475467",
                "fontFamily": "Inter-Regular",
                "fontSize": 12,
                "letterSpacing": 0.4,
                "lineHeight": 16,
              },
              {
                "color": "#22C55E",
                "fontWeight": "600",
              },
              {
                "textDecorationLine": "line-through",
              },
            ]
          }
          testID="money-saved-text"
        >
          $
          50
           saved
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "#22C55E",
            "borderRadius": 4,
            "paddingHorizontal": 8,
            "paddingVertical": 4,
          }
        }
        testID="completed-status-badge"
      >
        <Text
          style={
            {
              "color": "#FEFEFE",
              "fontFamily": "Inter-Regular",
              "fontSize": 12,
              "fontWeight": "600",
              "letterSpacing": 0.4,
              "lineHeight": 16,
            }
          }
        >
          COMPLETED
        </Text>
      </View>
      <View
        style={
          [
            {
              "backgroundColor": "#F9FAFB",
              "borderRadius": 4,
              "paddingHorizontal": 8,
              "paddingVertical": 4,
            },
            {
              "backgroundColor": "#F9FAFB",
            },
          ]
        }
        testID="difficulty-badge"
      >
        <Text
          style={
            [
              {
                "color": "#475467",
                "fontFamily": "Inter-Regular",
                "fontSize": 10,
                "letterSpacing": 0.4,
                "lineHeight": 16,
              },
              {
                "textDecorationLine": "line-through",
              },
            ]
          }
          testID="difficulty-text"
        >
          Medium
        </Text>
      </View>
    </View>
  </View>
</TouchableOpacity>
`;

exports[`TaskCard - Comprehensive Test Suite Snapshot Testing high priority task snapshot 1`] = `
<TouchableOpacity
  accessibilityLabel="Task: Test Task"
  accessibilityRole="button"
  accessibilityState={
    {
      "selected": false,
    }
  }
  onPress={[Function]}
  style={
    [
      {
        "backgroundColor": "#FEFEFE",
        "borderRadius": 12,
        "padding": 16,
      },
      false,
    ]
  }
  testID="high-priority-snapshot"
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "marginBottom": 12,
      }
    }
  >
    <View
      style={
        [
          {
            "borderRadius": 2,
            "height": 40,
            "marginRight": 12,
            "width": 4,
          },
          {
            "backgroundColor": "#EF4444",
          },
        ]
      }
    />
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#101828",
                "fontFamily": "Inter-Medium",
                "fontSize": 16,
                "letterSpacing": 0.1,
                "lineHeight": 24,
                "marginBottom": 4,
              },
              false,
            ]
          }
          testID="task-title"
        >
          Test Task
        </Text>
      </View>
      <Text
        numberOfLines={2}
        style={
          [
            {
              "color": "#475467",
              "fontFamily": "Inter-Regular",
              "fontSize": 14,
              "letterSpacing": 0.2,
              "lineHeight": 20,
            },
            false,
          ]
        }
        testID="task-description"
      >
        This is a test task description for testing purposes
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#667085",
          "fontSize": 16,
        }
      }
      testID="icon-right"
    >
      Icon-right
    </Text>
  </View>
  <View
    style={
      {
        "gap": 8,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 4,
          }
        }
      >
        <Text
          style={
            {
              "color": "#475467",
              "fontSize": 16,
            }
          }
          testID="icon-calendar"
        >
          Icon-calendar
        </Text>
        <Text
          style={
            [
              {
                "color": "#475467",
                "fontFamily": "Inter-Regular",
                "fontSize": 12,
                "letterSpacing": 0.4,
                "lineHeight": 16,
              },
              {
                "color": "#EF4444",
                "fontWeight": "600",
              },
              false,
            ]
          }
          testID="due-date-text"
        >
          Overdue
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 4,
          }
        }
      >
        <Text
          style={
            {
              "color": "#475467",
              "fontSize": 16,
            }
          }
          testID="icon-clock"
        >
          Icon-clock
        </Text>
        <Text
          style={
            [
              {
                "color": "#475467",
                "fontFamily": "Inter-Regular",
                "fontSize": 12,
                "letterSpacing": 0.4,
                "lineHeight": 16,
              },
              false,
            ]
          }
          testID="duration-text"
        >
          30
           min
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 4,
          }
        }
        testID="money-saved-item"
      >
        <Text
          style={
            {
              "color": "#22C55E",
              "fontSize": 16,
            }
          }
          testID="icon-check"
        >
          Icon-check
        </Text>
        <Text
          style={
            [
              {
                "color": "#475467",
                "fontFamily": "Inter-Regular",
                "fontSize": 12,
                "letterSpacing": 0.4,
                "lineHeight": 16,
              },
              {
                "color": "#22C55E",
                "fontWeight": "600",
              },
              false,
            ]
          }
          testID="money-saved-text"
        >
          $
          50
           saved
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 4,
              "paddingHorizontal": 8,
              "paddingVertical": 4,
            },
            {
              "backgroundColor": "#EF444420",
            },
          ]
        }
        testID="priority-badge"
      >
        <Text
          style={
            [
              {
                "color": "#667085",
                "fontFamily": "Inter-Regular",
                "fontSize": 10,
                "fontWeight": "600",
                "letterSpacing": 0.4,
                "lineHeight": 16,
              },
              {
                "color": "#EF4444",
              },
            ]
          }
          testID="priority-text"
        >
          HIGH
        </Text>
      </View>
      <View
        style={
          [
            {
              "backgroundColor": "#F9FAFB",
              "borderRadius": 4,
              "paddingHorizontal": 8,
              "paddingVertical": 4,
            },
            false,
          ]
        }
        testID="difficulty-badge"
      >
        <Text
          style={
            [
              {
                "color": "#475467",
                "fontFamily": "Inter-Regular",
                "fontSize": 10,
                "letterSpacing": 0.4,
                "lineHeight": 16,
              },
              false,
            ]
          }
          testID="difficulty-text"
        >
          Medium
        </Text>
      </View>
    </View>
  </View>
</TouchableOpacity>
`;

exports[`TaskCard - Comprehensive Test Suite Snapshot Testing overdue task snapshot 1`] = `
<TouchableOpacity
  accessibilityLabel="Task: Test Task"
  accessibilityRole="button"
  accessibilityState={
    {
      "selected": false,
    }
  }
  onPress={[Function]}
  style={
    [
      {
        "backgroundColor": "#FEFEFE",
        "borderRadius": 12,
        "padding": 16,
      },
      false,
    ]
  }
  testID="overdue-snapshot"
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "marginBottom": 12,
      }
    }
  >
    <View
      style={
        [
          {
            "borderRadius": 2,
            "height": 40,
            "marginRight": 12,
            "width": 4,
          },
          {
            "backgroundColor": "#F59E0B",
          },
        ]
      }
    />
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#101828",
                "fontFamily": "Inter-Medium",
                "fontSize": 16,
                "letterSpacing": 0.1,
                "lineHeight": 24,
                "marginBottom": 4,
              },
              false,
            ]
          }
          testID="task-title"
        >
          Test Task
        </Text>
      </View>
      <Text
        numberOfLines={2}
        style={
          [
            {
              "color": "#475467",
              "fontFamily": "Inter-Regular",
              "fontSize": 14,
              "letterSpacing": 0.2,
              "lineHeight": 20,
            },
            false,
          ]
        }
        testID="task-description"
      >
        This is a test task description for testing purposes
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#667085",
          "fontSize": 16,
        }
      }
      testID="icon-right"
    >
      Icon-right
    </Text>
  </View>
  <View
    style={
      {
        "gap": 8,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 4,
          }
        }
      >
        <Text
          style={
            {
              "color": "#475467",
              "fontSize": 16,
            }
          }
          testID="icon-calendar"
        >
          Icon-calendar
        </Text>
        <Text
          style={
            [
              {
                "color": "#475467",
                "fontFamily": "Inter-Regular",
                "fontSize": 12,
                "letterSpacing": 0.4,
                "lineHeight": 16,
              },
              {
                "color": "#EF4444",
                "fontWeight": "600",
              },
              false,
            ]
          }
          testID="due-date-text"
        >
          Overdue
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 4,
          }
        }
      >
        <Text
          style={
            {
              "color": "#475467",
              "fontSize": 16,
            }
          }
          testID="icon-clock"
        >
          Icon-clock
        </Text>
        <Text
          style={
            [
              {
                "color": "#475467",
                "fontFamily": "Inter-Regular",
                "fontSize": 12,
                "letterSpacing": 0.4,
                "lineHeight": 16,
              },
              false,
            ]
          }
          testID="duration-text"
        >
          30
           min
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 4,
          }
        }
        testID="money-saved-item"
      >
        <Text
          style={
            {
              "color": "#22C55E",
              "fontSize": 16,
            }
          }
          testID="icon-check"
        >
          Icon-check
        </Text>
        <Text
          style={
            [
              {
                "color": "#475467",
                "fontFamily": "Inter-Regular",
                "fontSize": 12,
                "letterSpacing": 0.4,
                "lineHeight": 16,
              },
              {
                "color": "#22C55E",
                "fontWeight": "600",
              },
              false,
            ]
          }
          testID="money-saved-text"
        >
          $
          50
           saved
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 4,
              "paddingHorizontal": 8,
              "paddingVertical": 4,
            },
            {
              "backgroundColor": "#F59E0B20",
            },
          ]
        }
        testID="priority-badge"
      >
        <Text
          style={
            [
              {
                "color": "#667085",
                "fontFamily": "Inter-Regular",
                "fontSize": 10,
                "fontWeight": "600",
                "letterSpacing": 0.4,
                "lineHeight": 16,
              },
              {
                "color": "#F59E0B",
              },
            ]
          }
          testID="priority-text"
        >
          MEDIUM
        </Text>
      </View>
      <View
        style={
          [
            {
              "backgroundColor": "#F9FAFB",
              "borderRadius": 4,
              "paddingHorizontal": 8,
              "paddingVertical": 4,
            },
            false,
          ]
        }
        testID="difficulty-badge"
      >
        <Text
          style={
            [
              {
                "color": "#475467",
                "fontFamily": "Inter-Regular",
                "fontSize": 10,
                "letterSpacing": 0.4,
                "lineHeight": 16,
              },
              false,
            ]
          }
          testID="difficulty-text"
        >
          Medium
        </Text>
      </View>
    </View>
  </View>
</TouchableOpacity>
`;

exports[`TaskCard - Comprehensive Test Suite Snapshot Testing pending task snapshot 1`] = `
<TouchableOpacity
  accessibilityLabel="Task: Test Task"
  accessibilityRole="button"
  accessibilityState={
    {
      "selected": false,
    }
  }
  onPress={[Function]}
  style={
    [
      {
        "backgroundColor": "#FEFEFE",
        "borderRadius": 12,
        "padding": 16,
      },
      false,
    ]
  }
  testID="pending-snapshot"
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "marginBottom": 12,
      }
    }
  >
    <View
      style={
        [
          {
            "borderRadius": 2,
            "height": 40,
            "marginRight": 12,
            "width": 4,
          },
          {
            "backgroundColor": "#F59E0B",
          },
        ]
      }
    />
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#101828",
                "fontFamily": "Inter-Medium",
                "fontSize": 16,
                "letterSpacing": 0.1,
                "lineHeight": 24,
                "marginBottom": 4,
              },
              false,
            ]
          }
          testID="task-title"
        >
          Test Task
        </Text>
      </View>
      <Text
        numberOfLines={2}
        style={
          [
            {
              "color": "#475467",
              "fontFamily": "Inter-Regular",
              "fontSize": 14,
              "letterSpacing": 0.2,
              "lineHeight": 20,
            },
            false,
          ]
        }
        testID="task-description"
      >
        This is a test task description for testing purposes
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#667085",
          "fontSize": 16,
        }
      }
      testID="icon-right"
    >
      Icon-right
    </Text>
  </View>
  <View
    style={
      {
        "gap": 8,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 4,
          }
        }
      >
        <Text
          style={
            {
              "color": "#475467",
              "fontSize": 16,
            }
          }
          testID="icon-calendar"
        >
          Icon-calendar
        </Text>
        <Text
          style={
            [
              {
                "color": "#475467",
                "fontFamily": "Inter-Regular",
                "fontSize": 12,
                "letterSpacing": 0.4,
                "lineHeight": 16,
              },
              {
                "color": "#EF4444",
                "fontWeight": "600",
              },
              false,
            ]
          }
          testID="due-date-text"
        >
          Overdue
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 4,
          }
        }
      >
        <Text
          style={
            {
              "color": "#475467",
              "fontSize": 16,
            }
          }
          testID="icon-clock"
        >
          Icon-clock
        </Text>
        <Text
          style={
            [
              {
                "color": "#475467",
                "fontFamily": "Inter-Regular",
                "fontSize": 12,
                "letterSpacing": 0.4,
                "lineHeight": 16,
              },
              false,
            ]
          }
          testID="duration-text"
        >
          30
           min
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 4,
          }
        }
        testID="money-saved-item"
      >
        <Text
          style={
            {
              "color": "#22C55E",
              "fontSize": 16,
            }
          }
          testID="icon-check"
        >
          Icon-check
        </Text>
        <Text
          style={
            [
              {
                "color": "#475467",
                "fontFamily": "Inter-Regular",
                "fontSize": 12,
                "letterSpacing": 0.4,
                "lineHeight": 16,
              },
              {
                "color": "#22C55E",
                "fontWeight": "600",
              },
              false,
            ]
          }
          testID="money-saved-text"
        >
          $
          50
           saved
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 4,
              "paddingHorizontal": 8,
              "paddingVertical": 4,
            },
            {
              "backgroundColor": "#F59E0B20",
            },
          ]
        }
        testID="priority-badge"
      >
        <Text
          style={
            [
              {
                "color": "#667085",
                "fontFamily": "Inter-Regular",
                "fontSize": 10,
                "fontWeight": "600",
                "letterSpacing": 0.4,
                "lineHeight": 16,
              },
              {
                "color": "#F59E0B",
              },
            ]
          }
          testID="priority-text"
        >
          MEDIUM
        </Text>
      </View>
      <View
        style={
          [
            {
              "backgroundColor": "#F9FAFB",
              "borderRadius": 4,
              "paddingHorizontal": 8,
              "paddingVertical": 4,
            },
            false,
          ]
        }
        testID="difficulty-badge"
      >
        <Text
          style={
            [
              {
                "color": "#475467",
                "fontFamily": "Inter-Regular",
                "fontSize": 10,
                "letterSpacing": 0.4,
                "lineHeight": 16,
              },
              false,
            ]
          }
          testID="difficulty-text"
        >
          Medium
        </Text>
      </View>
    </View>
  </View>
</TouchableOpacity>
`;

exports[`TaskCard - Comprehensive Test Suite Snapshot Testing task with equipment snapshot 1`] = `
<TouchableOpacity
  accessibilityLabel="Task: Test Task"
  accessibilityRole="button"
  accessibilityState={
    {
      "selected": false,
    }
  }
  onPress={[Function]}
  style={
    [
      {
        "backgroundColor": "#FEFEFE",
        "borderRadius": 12,
        "padding": 16,
      },
      false,
    ]
  }
  testID="equipment-snapshot"
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "marginBottom": 12,
      }
    }
  >
    <View
      style={
        [
          {
            "borderRadius": 2,
            "height": 40,
            "marginRight": 12,
            "width": 4,
          },
          {
            "backgroundColor": "#F59E0B",
          },
        ]
      }
    />
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#101828",
                "fontFamily": "Inter-Medium",
                "fontSize": 16,
                "letterSpacing": 0.1,
                "lineHeight": 24,
                "marginBottom": 4,
              },
              false,
            ]
          }
          testID="task-title"
        >
          Test Task
        </Text>
      </View>
      <View
        style={
          {
            "backgroundColor": "#F9FAFB",
            "borderColor": "#B8860B",
            "borderRadius": 4,
            "borderWidth": 1,
            "marginBottom": 8,
            "padding": 4,
          }
        }
        testID="equipment-badge"
      >
        <Text
          style={
            {
              "color": "#475467",
              "fontSize": 12,
            }
          }
          testID="icon-air-conditioner"
        >
          Icon-air-conditioner
        </Text>
        <Text
          style={
            {
              "color": "#101828",
              "fontFamily": "Inter-Regular",
              "fontSize": 12,
              "letterSpacing": 0.4,
              "lineHeight": 16,
            }
          }
        >
          Test Equipment
        </Text>
      </View>
      <Text
        numberOfLines={2}
        style={
          [
            {
              "color": "#475467",
              "fontFamily": "Inter-Regular",
              "fontSize": 14,
              "letterSpacing": 0.2,
              "lineHeight": 20,
            },
            false,
          ]
        }
        testID="task-description"
      >
        This is a test task description for testing purposes
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#667085",
          "fontSize": 16,
        }
      }
      testID="icon-right"
    >
      Icon-right
    </Text>
  </View>
  <View
    style={
      {
        "gap": 8,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 4,
          }
        }
      >
        <Text
          style={
            {
              "color": "#475467",
              "fontSize": 16,
            }
          }
          testID="icon-calendar"
        >
          Icon-calendar
        </Text>
        <Text
          style={
            [
              {
                "color": "#475467",
                "fontFamily": "Inter-Regular",
                "fontSize": 12,
                "letterSpacing": 0.4,
                "lineHeight": 16,
              },
              {
                "color": "#EF4444",
                "fontWeight": "600",
              },
              false,
            ]
          }
          testID="due-date-text"
        >
          Overdue
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 4,
          }
        }
      >
        <Text
          style={
            {
              "color": "#475467",
              "fontSize": 16,
            }
          }
          testID="icon-clock"
        >
          Icon-clock
        </Text>
        <Text
          style={
            [
              {
                "color": "#475467",
                "fontFamily": "Inter-Regular",
                "fontSize": 12,
                "letterSpacing": 0.4,
                "lineHeight": 16,
              },
              false,
            ]
          }
          testID="duration-text"
        >
          30
           min
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 4,
          }
        }
        testID="money-saved-item"
      >
        <Text
          style={
            {
              "color": "#22C55E",
              "fontSize": 16,
            }
          }
          testID="icon-check"
        >
          Icon-check
        </Text>
        <Text
          style={
            [
              {
                "color": "#475467",
                "fontFamily": "Inter-Regular",
                "fontSize": 12,
                "letterSpacing": 0.4,
                "lineHeight": 16,
              },
              {
                "color": "#22C55E",
                "fontWeight": "600",
              },
              false,
            ]
          }
          testID="money-saved-text"
        >
          $
          50
           saved
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 4,
              "paddingHorizontal": 8,
              "paddingVertical": 4,
            },
            {
              "backgroundColor": "#F59E0B20",
            },
          ]
        }
        testID="priority-badge"
      >
        <Text
          style={
            [
              {
                "color": "#667085",
                "fontFamily": "Inter-Regular",
                "fontSize": 10,
                "fontWeight": "600",
                "letterSpacing": 0.4,
                "lineHeight": 16,
              },
              {
                "color": "#F59E0B",
              },
            ]
          }
          testID="priority-text"
        >
          MEDIUM
        </Text>
      </View>
      <View
        style={
          [
            {
              "backgroundColor": "#F9FAFB",
              "borderRadius": 4,
              "paddingHorizontal": 8,
              "paddingVertical": 4,
            },
            false,
          ]
        }
        testID="difficulty-badge"
      >
        <Text
          style={
            [
              {
                "color": "#475467",
                "fontFamily": "Inter-Regular",
                "fontSize": 10,
                "letterSpacing": 0.4,
                "lineHeight": 16,
              },
              false,
            ]
          }
          testID="difficulty-text"
        >
          Medium
        </Text>
      </View>
    </View>
  </View>
</TouchableOpacity>
`;

exports[`TaskCard - Comprehensive Test Suite Snapshot Testing task with money saved snapshot 1`] = `
<TouchableOpacity
  accessibilityLabel="Task: Test Task"
  accessibilityRole="button"
  accessibilityState={
    {
      "selected": false,
    }
  }
  onPress={[Function]}
  style={
    [
      {
        "backgroundColor": "#FEFEFE",
        "borderRadius": 12,
        "padding": 16,
      },
      false,
    ]
  }
  testID="money-saved-snapshot"
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "marginBottom": 12,
      }
    }
  >
    <View
      style={
        [
          {
            "borderRadius": 2,
            "height": 40,
            "marginRight": 12,
            "width": 4,
          },
          {
            "backgroundColor": "#F59E0B",
          },
        ]
      }
    />
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#101828",
                "fontFamily": "Inter-Medium",
                "fontSize": 16,
                "letterSpacing": 0.1,
                "lineHeight": 24,
                "marginBottom": 4,
              },
              false,
            ]
          }
          testID="task-title"
        >
          Test Task
        </Text>
      </View>
      <Text
        numberOfLines={2}
        style={
          [
            {
              "color": "#475467",
              "fontFamily": "Inter-Regular",
              "fontSize": 14,
              "letterSpacing": 0.2,
              "lineHeight": 20,
            },
            false,
          ]
        }
        testID="task-description"
      >
        This is a test task description for testing purposes
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#667085",
          "fontSize": 16,
        }
      }
      testID="icon-right"
    >
      Icon-right
    </Text>
  </View>
  <View
    style={
      {
        "gap": 8,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 4,
          }
        }
      >
        <Text
          style={
            {
              "color": "#475467",
              "fontSize": 16,
            }
          }
          testID="icon-calendar"
        >
          Icon-calendar
        </Text>
        <Text
          style={
            [
              {
                "color": "#475467",
                "fontFamily": "Inter-Regular",
                "fontSize": 12,
                "letterSpacing": 0.4,
                "lineHeight": 16,
              },
              {
                "color": "#EF4444",
                "fontWeight": "600",
              },
              false,
            ]
          }
          testID="due-date-text"
        >
          Overdue
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 4,
          }
        }
      >
        <Text
          style={
            {
              "color": "#475467",
              "fontSize": 16,
            }
          }
          testID="icon-clock"
        >
          Icon-clock
        </Text>
        <Text
          style={
            [
              {
                "color": "#475467",
                "fontFamily": "Inter-Regular",
                "fontSize": 12,
                "letterSpacing": 0.4,
                "lineHeight": 16,
              },
              false,
            ]
          }
          testID="duration-text"
        >
          30
           min
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 4,
          }
        }
        testID="money-saved-item"
      >
        <Text
          style={
            {
              "color": "#22C55E",
              "fontSize": 16,
            }
          }
          testID="icon-check"
        >
          Icon-check
        </Text>
        <Text
          style={
            [
              {
                "color": "#475467",
                "fontFamily": "Inter-Regular",
                "fontSize": 12,
                "letterSpacing": 0.4,
                "lineHeight": 16,
              },
              {
                "color": "#22C55E",
                "fontWeight": "600",
              },
              false,
            ]
          }
          testID="money-saved-text"
        >
          $
          150
           saved
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 4,
              "paddingHorizontal": 8,
              "paddingVertical": 4,
            },
            {
              "backgroundColor": "#F59E0B20",
            },
          ]
        }
        testID="priority-badge"
      >
        <Text
          style={
            [
              {
                "color": "#667085",
                "fontFamily": "Inter-Regular",
                "fontSize": 10,
                "fontWeight": "600",
                "letterSpacing": 0.4,
                "lineHeight": 16,
              },
              {
                "color": "#F59E0B",
              },
            ]
          }
          testID="priority-text"
        >
          MEDIUM
        </Text>
      </View>
      <View
        style={
          [
            {
              "backgroundColor": "#F9FAFB",
              "borderRadius": 4,
              "paddingHorizontal": 8,
              "paddingVertical": 4,
            },
            false,
          ]
        }
        testID="difficulty-badge"
      >
        <Text
          style={
            [
              {
                "color": "#475467",
                "fontFamily": "Inter-Regular",
                "fontSize": 10,
                "letterSpacing": 0.4,
                "lineHeight": 16,
              },
              false,
            ]
          }
          testID="difficulty-text"
        >
          Medium
        </Text>
      </View>
    </View>
  </View>
</TouchableOpacity>
`;
